k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-webserver
  labels:
    app: go-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-webserver
  template:
    metadata:
      labels:
        app: go-webserver
    spec:
      containers:
        - name: go-webserver
          image: xomrkob/go-http-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3333
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /health
              port: 3333
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3333
            initialDelaySeconds: 5
            periodSeconds: 10
