k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-webserver-service
spec:
  selector:
    app: go-webserver
  ports:
    - port: 80
      targetPort: 3333
  type: ClusterIP
