k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-webserver-ingress
  namespace: go-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: go-app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-webserver-service
                port:
                  number: 80
